--- a/DirRX.HelpDesk/DirRX.HelpDesk.Shared/ExternalRequest/ExternalRequestSystem.ru.resx
+++ b/DirRX.HelpDesk/DirRX.HelpDesk.Shared/ExternalRequest/ExternalRequestSystem.ru.resx
@@ -58,31 +58,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Property_Name" xml:space="preserve">
-    <value>Name</value>
+  <data name="Control_9b7dcbfe4fd84d1ebb3df32f0b255f87_EmptyText" xml:space="preserve">
+    <value />
   </data>
-  <data name="DisplayName" xml:space="preserve">
-    <value>Обращение</value>
+  <data name="Resource_9b7dcbfe4fd84d1ebb3df32f0b255f87" xml:space="preserve">
+    <value />
   </data>
-  <data name="CollectionDisplayName" xml:space="preserve">
-    <value>Обращения</value>
+  <data name="Resource_ee3502f63227445091f732434fe0537f" xml:space="preserve">
+    <value />
   </data>
-  <data name="AccusativeDisplayName" xml:space="preserve">
-    <value>Обращение</value>
+  <data name="Control_9c761fb020be42f097e17486bc7a95fb_EmptyText" xml:space="preserve">
+    <value />
   </data>
-  <data name="Property_Number" xml:space="preserve">
-    <value>Номер обращения</value>
+  <data name="Resource_9c761fb020be42f097e17486bc7a95fb" xml:space="preserve">
+    <value />
   </data>
-  <data name="Property_Description" xml:space="preserve">
-    <value>Описание</value>
+  <data name="Resource_89c327ccd9f2433e90a1091f4f6eced4" xml:space="preserve">
+    <value />
   </data>
-  <data name="Property_CreatedDate" xml:space="preserve">
-    <value>Дата создания</value>
+  <data name="Control_b5c2cfebaeb34af7982d95f613058573_EmptyText" xml:space="preserve">
+    <value />
   </data>
-  <data name="Property_Responsible" xml:space="preserve">
-    <value>Ответственный</value>
+  <data name="Resource_b5c2cfebaeb34af7982d95f613058573" xml:space="preserve">
+    <value />
   </data>
-  <data name="Property_Index" xml:space="preserve">
-    <value>Индекс</value>
+  <data name="ControlGroup_6d113d971e514a3f9a2ea285fda6a191" xml:space="preserve">
+    <value />
   </data>
 </root>
